simple spacing fixes, improved organization of code

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 
-
-
 body {
     margin: 0;
     min-height: 100vh;
@@ -10,12 +8,9 @@ body {
 
     background-image: url( 'StarfieldSimulation.gif' );
     background-size: cover;
-
-    /*background-image: url('http://i.stack.imgur.com/kx8MT.gif');
-    background: linear-gradient(45deg, rgb(0, 0, 0), rgb(0, 0, 178));
-    background: linear-gradient(45deg, rgb(255, 0, 0), rgb(0, 0, 178));*/
     
 }
+
 span {
     grid-area: 1/2/1/2;
     padding: 0px 20px 5px 20px;
@@ -23,6 +18,7 @@ span {
     justify-content: space-between;
     align-items: flex-end;
 }
+
 button {
     background-color: transparent;
     border: none;
@@ -46,6 +42,7 @@ button {
     animation-duration: 3s;
     animation-iteration-count: infinite;
 }
+
 .flashOnce {
     animation: flash;
     animation-duration: 2s;
@@ -80,6 +77,8 @@ div {
     background-size: cover;
     border-radius: 12px;
     background-color: transparent;
+    height: 125%;
+    width: 125%;
     box-shadow:
         0 0 7px rgb(0, 55, 255),
         0 0 10px rgb(255, 1, 1),
@@ -90,11 +89,14 @@ div {
         0 0 102px rgb(255, 0, 0),
         0 0 151px rgb(255, 0, 0);
     }
+
 #earth {
     background-image: url('earth.png');
     background-size: cover;
     border-radius: 12px;
     background-color: transparent;
+    height: 125%;
+    width: 125%;
     box-shadow:
         0 0 7px rgb(0, 0, 255),
         0 0 10px rgb(0, 0, 255),
@@ -105,11 +107,14 @@ div {
         0 0 102px rgb(0, 0, 255),
         0 0 151px rgb(0, 0, 255);
 }
+
 #green_planet {
     background-image: url('green_planet.png');
     background-size: cover;
     border-radius: 12px;
     background-color: transparent;
+    height: 125%;
+    width: 125%;
     box-shadow:
         0 0 7px rgb(0, 255, 0),
         0 0 10px rgb(0, 255, 0),
@@ -120,11 +125,14 @@ div {
         0 0 102px rgb(0, 255, 0),
         0 0 151px rgb(0, 255, 0);
 }
+
 #purple_planet {
     background-image: url('purple_planet.png');
     background-size: cover;
     border-radius: 12px;
     background-color: transparent;
+    height: 125%;
+    width: 125%;
     box-shadow:
         0 0 7px rgb(255, 0, 255),
         0 0 10px rgb(255, 0, 255),
@@ -135,7 +143,6 @@ div {
         0 0 102px rgb(255, 0, 255),
         0 0 151px rgb(255, 0, 255);
 }
-
 
 #snake {
     background-color: transparent;
@@ -172,9 +179,9 @@ div {
 }
 
 #deadSnake {
-    background-color: transparent;
-    height: 140%;
-    width: 140%;
+    background-color: rgba(0,0,255);
+    height: 100%;
+    width: 100%;
     box-shadow:
     0 0 1px #fff,
     0 0 2px #fff,
